provide defaults for jvm.customOptions using jvb.sh and jicofo.sh