@@ -172,12 +172,12 @@ public class JvbPluginWrapper implements ProcessListener
         final File props_file = new File(jvbHomePath + File.separator + "config" + File.separator + "sip-communicator.properties");
         writeProperties(props_file);
 
-        final String customOptions = JiveGlobals.getProperty( "org.jitsi.videobridge.ofmeet.jvb.jvm.customOptions", "");
+        final String customOptions = JiveGlobals.getProperty( "org.jitsi.videobridge.ofmeet.jvb.jvm.customOptions", "-Xmx3072m -XX:+UseConcMarkSweepGC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp");
         final String cmdLine = javaExec + " " + customOptions + " -Dconfig.file=" + configFile + " -Dnet.java.sip.communicator.SC_HOME_DIR_LOCATION=" + jvbHomePath + " -Dnet.java.sip.communicator.SC_HOME_DIR_NAME=config -Djava.util.logging.config.file=./logging.properties -Djdk.tls.ephemeralDHKeySize=2048 -cp " + jvbHomePath + "/jitsi-videobridge.jar" + File.pathSeparator + jvbHomePath + "/jitsi-videobridge-2.1-SNAPSHOT-jar-with-dependencies.jar org.jitsi.videobridge.MainKt  --apis=rest";
         jvbThread = Spawn.startProcess(cmdLine, new File(jvbHomePath), this);
 
         Log.info( "Successfully initialized Jitsi Videobridge.\n" + cmdLine);
-        Log.debug( "JVB config.\n" + cmdLine + "\n" + String.join("\n", lines));
+        Log.debug( "JVB config.\n" + String.join("\n", lines));
     }
 
     private void writeProperties( File props_file )
